feat: 入口页面及登录页面完成

--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -97,11 +97,11 @@ input {
 
 body,
 html {
-    background-color: #f2f2f7;
+    background-color: #ffffff;
     height: 100%;
-    color: #5a5a5a;
+    color: #585858;
     a {
-        color: #5a5a5a;
+        color: #585858;
     }
     /*上下拉动滚动条时卡顿、慢*/
     -webkit-overflow-scrolling : touch;
@@ -109,10 +109,11 @@ html {
 }
 #app{
     height: 100%;
-    background-color: #f2f2f7;
+    background-color: #ffffff;
     padding-bottom: 0  !important;
     padding-bottom: constant(safe-area-inset-bottom) !important;
     padding-bottom: env(safe-area-inset-bottom) !important;
+    text-align: center;
 }
 #app::after{
     position: absolute;
