--- a/src/assets/less/excludecss/index.less
+++ b/src/assets/less/excludecss/index.less
@@ -1,3 +1,80 @@
-.test{
-    border: 1px solid #f00;
+/*1px边框处理*/
+.border(@c:#dcdcdc) {
+    content: " ";
+    position: absolute;
+    transform-origin: 0 100%;
+    color: @c;
+}
+
+.border-b(@c:#dcdcdc) {
+    .border(@c);
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px solid @c;
+    transform: scaleY(0.5);
+}
+
+.border-t(@c:#dcdcdc) {
+    .border(@c);
+    left: 0;
+    top: -1px;
+    width: 100%;
+    height: 1px;
+    border-top: 1px solid @c;
+    transform: scaleY(0.5);
+}
+
+.border-r(@c:#dcdcdc) {
+    .border(@c);
+    right: -1px;
+    top: 0;
+    width: 1px;
+    height: 100%;
+    border-right: 1px solid @c;
+    transform: scaleX(0.5);
+}
+
+.border-l(@c:#dcdcdc) {
+    .border(@c);
+    left: -1px;
+    top: 0;
+    width: 1px;
+    height: 100%;
+    border-left: 1px solid @c;
+    transform: scaleX(0.5);
+}
+/*1px边框处理*/
+.border-b,
+.border-t,
+.border-l,
+.border-r {
+  position: relative;
+}
+.border-b::after {.border-b();}
+.border-t::before {.border-t();}
+.border-r::before {.border-r();}
+.border-l::after {.border-l();}
+
+.scale-1px(@c:#C3C3CD, @radius: 4px){
+    position: relative;
+    border: none;
+    border-radius: @radius;
+    &:after{
+        content: '';
+        border-radius: inherit;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        border: 1PX solid @c;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
+        transform-origin: left top;
+    }
 }
