--- a/src/assets/less/index.less
+++ b/src/assets/less/index.less
@@ -1,4 +1,5 @@
 @import './reset.less';
 @import './commons.less';
 @import './flex.less';
+@import './color.less';
 @import './excludecss/index.less';
