feat: 注册及首页静态页面完成

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -1,4 +1,6 @@
 @primary: #5894EE;
+@red: #FF6666;
+@green: #3CD2AC;
 .primary-bg{
     background-color: @primary;
     color: #ffffff;
@@ -9,4 +11,18 @@
 .info-bg{
     .primary-color;
     background: #EDF3FB;
+}
+.red-bg{
+    background-color: @red;
+    color: #ffffff;
+}
+.red-color{
+    color: @red;
+}
+.green-bg{
+    background-color: @green;
+    color: #ffffff;
+}
+.green-color{
+    color: @green;
 }
