--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -10,3 +10,12 @@
 .ellipsis {overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
 .ellipsis-1 {.textLine();}
 .ellipsis-2 {.textLine(2);}
+
+.lxa-footer-btn{
+    position: absolute;
+    margin: auto;
+    bottom: 62px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
