--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -62,7 +62,7 @@ menu {
 }
 
 img {
-    border: 0
+    border: 0;
 }
 
 img,
@@ -114,6 +114,7 @@ html {
     padding-bottom: constant(safe-area-inset-bottom) !important;
     padding-bottom: env(safe-area-inset-bottom) !important;
     text-align: center;
+    font-size: 24px;
 }
 #app::after{
     position: absolute;
