--- a/src/assets/less/flex.less
+++ b/src/assets/less/flex.less
@@ -26,6 +26,11 @@
     justify-content: space-around;
     align-items: center;
 }
+.flex-around-s{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
 .flex-center-s{
     display: flex;
     justify-content: center;
