--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -1,13 +1,17 @@
 .login{
     position: relative;
     height: 100%;
+    font-size: 34px;
     &-box{
         text-align: left;
-        padding-left: 40px;
+        padding: 40px;
         margin-top: 35px;
-        font-size: 34px;
         &-tip{
             color: #575757;
+        }
+        &-link{
+            margin-top: 58px;
+            text-align: right;
         }
     }
     &-form{
@@ -18,13 +22,5 @@
                 margin-bottom: 0;
             }
         }
-    }
-    &-btn{
-        position: absolute;
-        margin: auto;
-        bottom: 62px;
-        left: 0;
-        right: 0;
-
     }
 }
