--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -11,6 +11,10 @@
 .ellipsis-1 {.textLine();}
 .ellipsis-2 {.textLine(2);}
 
+.app-padding40{
+    padding: 0 40px;
+}
+
 .lxa-footer-btn{
     position: absolute;
     margin: auto;
