feat: 个人中心静态页面完成

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -1,6 +1,10 @@
 @primary: #5894EE;
 @red: #FF6666;
 @green: #3CD2AC;
+
+@usdt: #FFA47A;
+@tusd: #22B67E;
+@usdc: #2876CA;
 .primary-bg{
     background-color: @primary;
     color: #ffffff;
@@ -25,4 +29,13 @@
 }
 .green-color{
     color: @green;
+}
+.usdt-bg{
+    background-color: @usdt;
+}
+.tusd-bg{
+    background-color: @tusd;
+}
+.usdc-bg{
+    background-color: @usdc;
 }
