--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -11,15 +11,25 @@
 .ellipsis-1 {.textLine();}
 .ellipsis-2 {.textLine(2);}
 
+.vertical-m{
+    vertical-align: middle;
+}
+
 .app-padding40{
     padding: 0 40px;
+}
+.app-img-50{
+    width: 50px;
+    height: auto;
 }
 
 .lxa-footer-btn{
     position: absolute;
-    margin: auto;
-    bottom: 62px;
+    margin: 0 auto;
+    bottom: 0;
+    padding: 24px 0 62px;
     left: 0;
     right: 0;
     text-align: center;
+    background-color: #ffffff;
 }
