--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -22,6 +22,16 @@
     width: 50px;
     height: auto;
 }
+.app-size-34{
+    font-size: 34px;
+}
+
+.text-align-l{
+    text-align: left;
+}
+.text-align-r{
+    text-align: right;
+}
 
 .lxa-footer-btn{
     position: absolute;
@@ -32,4 +42,30 @@
     right: 0;
     text-align: center;
     background-color: #ffffff;
+}
+
+.app-toast-shade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+.app-toast-shade .app-normal-toast {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    padding: 30px 80px;
+    width: fit-content;
+    height: 26px;
+    line-height: 26px;
+    font-size: 26px;
+    color: #fff;
+    box-sizing: content-box;
+    border-radius: 10px;
+    background-color: rgba(67, 67, 67, 0.6);
 }
