--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -22,4 +22,9 @@
             }
         }
     }
+    .code-img {
+      background-color: #5894ee;
+      vertical-align: middle;
+      margin-bottom: 5px;
+    }
 }
