feat: otc发布广告静态页面

--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -43,6 +43,15 @@
     text-align: center;
     background-color: #ffffff;
 }
+.lxa-footer-bottom{
+    position: absolute;
+    margin: 0 auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background-color: #ffffff;
+}
 
 .app-toast-shade {
     position: fixed;
