--- a/src/assets/less/flex.less
+++ b/src/assets/less/flex.less
@@ -21,6 +21,11 @@
     justify-content: space-between;
     align-items: center;
 }
+.flex-between-end{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
 .flex-around-c{
     display: flex;
     justify-content: space-around;
