增加安全认证

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -5,6 +5,12 @@
 @usdt: #FFA47A;
 @tusd: #22B67E;
 @usdc: #2876CA;
+@btc: #f9a947;
+@eth: #383333;
+@pax: #075229;
+@busd: #f0b90b;
+@husd: #005ffa;
+
 .primary-bg{
     background-color: @primary;
     color: #ffffff;
@@ -38,4 +44,19 @@
 }
 .usdc-bg{
     background-color: @usdc;
+}
+.btc-bg{
+    background-color: @btc;
+}
+.eth-bg{
+    background-color: @eth;
+}
+.pax-bg{
+    background-color: @pax;
+}
+.busd-bg{
+    background-color: @busd;
+}
+.husd-bg{
+    background-color: @husd;
 }
