--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -18,6 +18,9 @@
 .app-padding40{
     padding: 0 40px;
 }
+.app-margin-t40{
+    margin-top: 40px;
+}
 .app-img-50{
     width: 50px;
     height: auto;
