feat: 场外订单详情及申诉

--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -81,3 +81,6 @@
     border-radius: 10px;
     background-color: rgba(67, 67, 67, 0.6);
 }
+.app-reset-diolog-message{
+    white-space: normal;
+}
