--- a/src/views/home/assets-symbol-list.less
+++ b/src/views/home/assets-symbol-list.less
@@ -10,7 +10,9 @@
     &>ul>{
         margin-top: 47px;
         &>li{
-            margin-top: 76px;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            // border-bottom: 1px solid #dcdcdc;
             &:first-child{
                 margin-top: 0;
             }
