--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -1,6 +1,7 @@
 @primary: #5894EE;
 @red: #FF6666;
 @green: #3CD2AC;
+@gray: #CACACA;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -35,6 +36,9 @@
 }
 .green-color{
     color: @green;
+}
+.gray-color{
+    color: @gray;
 }
 .usdt-bg{
     background-color: @usdt;
