--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -3,6 +3,15 @@ Reset Stylesheet
 2020-09-02
 Author: long_shaun
 */
+
+*{
+    -webkit-touch-callout:text;
+    -webkit-user-select:text;
+    -khtml-user-select:text;
+    -moz-user-select:text;
+    -ms-user-select:text;
+    user-select:text;
+}
 body,
 ul,
 ol,
@@ -27,22 +36,6 @@ td {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    -webkit-touch-callout:text;
-    -webkit-user-select:text;
-    -khtml-user-select:text;
-    -moz-user-select:text;
-    -ms-user-select:text;
-    user-select:text;
-}
-
-
-span, a{
-    -webkit-touch-callout:text;
-    -webkit-user-select:text;
-    -khtml-user-select:text;
-    -moz-user-select:text;
-    -ms-user-select:text;
-    user-select:text;
 }
 
 h1,
