fix: 底部按钮显示优化

--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -37,14 +37,15 @@
 }
 
 .lxa-footer-btn{
-    position: absolute;
+    position: sticky;
     margin: 0 auto;
-    bottom: 0;
+    // bottom: 0;
     padding: 24px 0 62px;
-    left: 0;
-    right: 0;
+    // left: 0;
+    // right: 0;
+    top: calc(100% - 184px);
     text-align: center;
-    background-color: #ffffff;
+    // background-color: #ffffff;
 }
 .lxa-footer-bottom{
     position: absolute;
