feat: 底部按钮优化

--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -45,6 +45,7 @@
     // right: 0;
     top: calc(100% - 184px);
     text-align: center;
+    width: 100%;
     // background-color: #ffffff;
 }
 .lxa-footer-bottom{
