--- a/src/assets/less/excludecss/index.less
+++ b/src/assets/less/excludecss/index.less
@@ -14,6 +14,7 @@
     height: 1px;
     border-bottom: 1px solid @c;
     transform: scaleY(0.5);
+    z-index: 1;
 }
 
 .border-t(@c:#dcdcdc) {
@@ -24,6 +25,7 @@
     height: 1px;
     border-top: 1px solid @c;
     transform: scaleY(0.5);
+    z-index: 1;
 }
 
 .border-r(@c:#dcdcdc) {
@@ -34,6 +36,7 @@
     height: 100%;
     border-right: 1px solid @c;
     transform: scaleX(0.5);
+    z-index: 1;
 }
 
 .border-l(@c:#dcdcdc) {
@@ -44,6 +47,7 @@
     height: 100%;
     border-left: 1px solid @c;
     transform: scaleX(0.5);
+    z-index: 1;
 }
 /*1px边框处理*/
 .border-b,
