--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -40,7 +40,9 @@
     position: sticky;
     margin: 0 auto;
     // bottom: 0;
-    padding: 48px 0 62px;
+    // padding: 48px 0 62px;
+    padding-top: 48px;
+    padding-bottom: 62px;
     // left: 0;
     // right: 0;
     top: calc(100% - 208px);
