修改地址样式

--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -156,3 +156,12 @@ html {
     overflow-x: hidden;
     flex-direction: column;
 }
+#app .van-cell {
+    background-color: #F5F7F9;
+}
+.button_cont{
+    background-color: #F5F7F9;
+    .app-img-50{
+        margin-left: 40px;
+    }
+}
