--- a/src/views/home/assets-symbol-list.less
+++ b/src/views/home/assets-symbol-list.less
@@ -34,6 +34,7 @@
                 }
                 .value{
                     color: #A5A5A5;
+                    font-size: 24px;
                 }
                 img{
                     width: 50px;
