修改密码步骤

--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -168,3 +168,7 @@ html {
 .confirm_34 .van-dialog__message{
     font-size: 34px;
 }
+#app .van-password-input__security li {
+    background-color: #F4F6F9;
+    border-radius: 5px;
+}
