修改字体大小

--- a/src/views/home/assets-symbol-list.less
+++ b/src/views/home/assets-symbol-list.less
@@ -10,8 +10,8 @@
     &>ul>{
         margin-top: 47px;
         &>li{
-            padding-bottom: 20px;
-            margin-bottom: 20px;
+            padding-bottom: 35px;
+            margin-bottom: 35px;
             // border-bottom: 1px solid #dcdcdc;
             &:first-child{
                 margin-top: 0;
@@ -34,7 +34,15 @@
                 }
                 .value{
                     color: #A5A5A5;
-                    font-size: 24px;
+                    font-size: 28px;
+                }
+                .num_lable{
+                    color: #585858;
+                    font-size: 40px;
+                }
+                .num_value{
+                    color: #A5A5A5;
+                    font-size: 28px;
                 }
                 img{
                     width: 50px;
