--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -1,6 +1,7 @@
 .login{
     position: relative;
     height: 100%;
+    overflow: auto;
     font-size: 34px;
     &-box{
         text-align: left;
