--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -25,6 +25,10 @@
     width: 50px;
     height: auto;
 }
+.app-img-35{
+    width: 35px;
+    height: auto;
+}
 .app-size-34{
     font-size: 34px;
 }
