--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -99,3 +99,11 @@
 .app-reset-diolog-message{
     white-space: normal;
 }
+
+
+.ios-touch{
+    -webkit-overflow-scrolling : touch;
+}
+.ios-auto{
+    -webkit-overflow-scrolling : auto;
+}
