--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -16,6 +16,9 @@
     }
     &-form{
         margin-top: 42px;
+        &-check{
+            justify-content: center;
+        }
         &-item{
             margin-bottom: 30px;
             &:last-child{
