--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -136,6 +136,7 @@ html {
     padding-bottom: env(safe-area-inset-bottom) !important;
     text-align: center;
     font-size: 24px;
+    overflow: scroll;
 }
 #app::after{
     position: absolute;
