feat: 字体及扫一扫

--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -124,6 +124,7 @@ html {
     a {
         color: #585858;
     }
+    font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
     /*上下拉动滚动条时卡顿、慢*/
     -webkit-overflow-scrolling : touch;
     // -webkit-overflow-scrolling : auto;
@@ -137,6 +138,12 @@ html {
     text-align: center;
     font-size: 24px;
     overflow: scroll;
+}
+#app.en-us{
+font-family: 'AlibabaSans-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+}
+#app.zh-cn, #app.zh-tw{
+font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
 }
 #app::after{
     position: absolute;
