--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -142,7 +142,7 @@ html {
 #app.en-us{
 font-family: 'AlibabaSans-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
 }
-#app.zh-cn, #app.zh-tw{
+#app.zh-CN, #app.zh-tw{
 font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
 }
 #app::after{
