--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -124,7 +124,6 @@ html {
     a {
         color: #585858;
     }
-    font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
     /*上下拉动滚动条时卡顿、慢*/
     -webkit-overflow-scrolling : touch;
     // -webkit-overflow-scrolling : auto;
@@ -139,12 +138,12 @@ html {
     font-size: 24px;
     overflow: scroll;
 }
-#app.en-us{
-font-family: 'AlibabaSans-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
-}
-#app.zh-CN, #app.zh-tw{
-font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
-}
+// #app.en-us{
+// font-family: 'AlibabaSans-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+// }
+// #app.zh-CN, #app.zh-tw{
+// font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+// }
 #app::after{
     position: absolute;
     content:'';
