--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -60,6 +60,20 @@
     bottom: constant(safe-area-inset-bottom) !important;
     bottom: env(safe-area-inset-bottom) !important;
 }
+*{
+    -webkit-touch-callout:none; /*系统默认菜单被禁用*/
+    -webkit-user-select:none; /*webkit浏览器*/
+    -khtml-user-select:none; /*早期浏览器*/
+    -moz-user-select:none;/*火狐*/
+    -ms-user-select:none; /*IE10*/
+    user-select:none;
+}
+input,textarea {
+    -webkit-user-select:auto; /*webkit浏览器*/
+    margin: 0px;
+    padding: 0px;
+    outline: none;
+}
 .lxa-footer-bottom{
     position: fixed;
     margin: 0 auto;
