feat: 广告商家详情

--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -21,6 +21,9 @@
 .app-margin-t40{
     margin-top: 40px;
 }
+.app-border-margin16{
+    margin: 0 16px;
+}
 .app-img-50{
     width: 50px;
     height: auto;
