--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -39,4 +39,9 @@
             }
         }
     }
+    &-protocol{
+        font-size: 28px;
+        line-height: 28px;
+        margin: 30px 0;
+    }
 }
