feat： 邀请静态页面

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -2,6 +2,7 @@
 @red: #FF6666;
 @green: #3CD2AC;
 @gray: #CACACA;
+@light-grey: #F4F6F9;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -39,6 +40,9 @@
 }
 .gray-color{
     color: @gray;
+}
+.light-grey{
+    background-color: @light-grey;
 }
 .usdt-bg{
     background-color: @usdt;
