feat: 首页静态更改

--- a/src/assets/less/flex.less
+++ b/src/assets/less/flex.less
@@ -60,3 +60,9 @@
     display: flex;
     flex-direction: column;
 }
+.flex-warp-s{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+}
