feat: 邀请接口对接

--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -166,6 +166,9 @@ html {
 #app .van-cell {
     background-color: #F5F7F9;
 }
+#app .app-popup-bottom{
+    border-radius: 20px 20px 0 0;
+}
 .button_cont{
     background-color: #F5F7F9;
     .app-img-50{
