--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -138,12 +138,32 @@ html {
     font-size: 24px;
     overflow: scroll;
 }
-// #app.en-us{
-// font-family: 'AlibabaSans-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
-// }
-// #app.zh-CN, #app.zh-tw{
-// font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
-// }
+#app.en{
+    font-family: 'AlibabaSans-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    b,
+    strong {
+        font-family: 'AlibabaSans-Bold', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+    }
+}
+#app.zh-CN, #app.zh-tw{
+    font-family: 'Alibaba-PuHuiTi-Regular', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    b,
+    strong {
+        font-family: 'Alibaba-PuHuiTi-Bold', 'Microsoft Yahei', 'Avenir', Helvetica, Arial, sans-serif;
+    }
+}
 #app::after{
     position: absolute;
     content:'';
