--- a/public/register/css/index.css
+++ b/public/register/css/index.css
@@ -3,6 +3,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    -webkit-overflow-scrolling : touch;
 }
 
 .body_container{
@@ -157,4 +158,31 @@
     float: right;
     margin-top: 25px;
     width: 25px;
+}
+#country .positionF{
+    position: -webkit-sticky;
+    position: sticky;
+    margin: auto 22px;
+    top: 0;
+    background: #fff;
+}
+#country .search-img{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    left: 20px;
+    top: 21px;
+}
+#country .input{
+    background-color: rgba(228, 228, 228, 0.5);
+    color: #999;
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    padding-left: 50px;
+    margin: 8px 0;
+    font-size: 14px;
+    box-sizing: border-box;
 }
