--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -20,6 +20,9 @@
 .primary-color{
     color: @primary;
 }
+.primary-border-color{
+    border-color: @primary;
+}
 .info-bg{
     .primary-color;
     background: #EDF3FB;
@@ -40,6 +43,9 @@
 }
 .gray-color{
     color: @gray;
+}
+.gray-border-color{
+    border-color: @gray;
 }
 .light-grey-bg{
     background-color: @light-grey;
