--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -32,8 +32,14 @@
     width: 35px;
     height: auto;
 }
+.app-size-28{
+    font-size: 28px;
+}
 .app-size-34{
     font-size: 34px;
+}
+.app-size-45{
+    font-size: 45px;
 }
 
 .text-align-l{
