feat: 增加支付方式

--- a/src/views/payway/index.less
+++ b/src/views/payway/index.less
@@ -9,6 +9,9 @@
         border-radius: 15px;
         padding: 34px 24px;
         margin-bottom: 50px;
+        &-title{
+            height: 50px;
+        }
     }
     &-info{
         color: #8D8D8D;
