--- a/src/assets/less/reset.less
+++ b/src/assets/less/reset.less
@@ -175,14 +175,14 @@ html {
     height: env(safe-area-inset-bottom) !important;
 }
 
-#main{
-    height: 100%;
-    position: relative;
-    box-sizing: border-box;
-    display: flex;
-    overflow-x: hidden;
-    flex-direction: column;
-}
+// #main{
+//     height: 100%;
+//     position: relative;
+//     box-sizing: border-box;
+//     display: flex;
+//     overflow-x: hidden;
+//     flex-direction: column;
+// }
 #app .van-cell {
     background-color: #F5F7F9;
 }
