feat:  红包列表页

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -3,6 +3,7 @@
 @green: #3CD2AC;
 @gray: #CACACA;
 @light-grey: #F4F6F9;
+@yellow: #D1AE76;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -40,6 +41,9 @@
 }
 .green-color{
     color: @green;
+}
+.yellow-color{
+    color: @yellow;
 }
 .gray-color{
     color: @gray;
