--- a/src/assets/less/flex.less
+++ b/src/assets/less/flex.less
@@ -26,6 +26,11 @@
     justify-content: space-between;
     align-items: flex-end;
 }
+.flex-center-end{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
 .flex-around-c{
     display: flex;
     justify-content: space-around;
