--- a/src/assets/less/excludecss/pcindex.css
+++ b/src/assets/less/excludecss/pcindex.css
@@ -35,11 +35,13 @@
 .pcindex{
     color: #696969;
     font-size: 14px;
+    min-width: 1080px !important;
 }
 .pcindex-top{
     height: 1040px;
     background: url('../img/bg2.png') no-repeat ;
-    padding: 16px 375px;
+    padding: 16px 15vw;
+    background-position-x: right;
 }
 .pcindex-top .tab .tab-item{
     color: #ffffff;
@@ -61,10 +63,47 @@
     margin: auto;
 }
 .pcindex-top-language{
+    position: relative;
     color: #ffffff;
+    /* background: #000; */
+    height: 50px;
+    line-height: 50px;
+    padding: 0 5px;
+}
+.pcindex-top-language .language-value{
+    margin-left: 8px;
+}
+.pcindex-top-language .language-select{
+    position: absolute;
+    border-radius: 5px;
+    top: 50px;
+    background: #ffffff;
+    padding: 5px 0;
+    line-height: 28px;
+    /* display: none; */
+    transition: all 0.3s;
+    opacity: 0;
+
+}
+.pcindex-top-language:hover .language-select{
+    display: block;
+    transition: all 0.3s;
+    opacity: 1;
+}
+.pcindex-top-language .language-select a{
+    display: inline-block;
+    line-height: 28px;
+    white-space: nowrap;
+    padding: 0 22px;
+    transition: all 0.3s;
+}
+.pcindex-top-language .language-select a:hover{
+    color: #358ce4;
+    transition: all 0.3s;
 }
 .pcindex-top-body{
     margin-top: 88px;
+    text-align: left;
 }
 .pcindex-top-body .title{
     margin: 28px 0;
@@ -78,6 +117,7 @@
     line-height: 60px;
     color: #ffffff;
     width: 210px;
+    text-align: center;
 }
 
 .pcindex-banner1{
@@ -133,6 +173,9 @@
     margin-top: 190px;
     text-align: left;
 }
+.pcindex-banner3-right{
+    margin-left: 85px;
+}
 .pcindex-banner3-li{
     width: 570px;
     height: 180px;
@@ -186,7 +229,7 @@
 }
 .pcindex-banner4-ercodebox{
     position: absolute;
-    top: 100px;
+    top: 72px;
     left: 12px;
     opacity: 0;
     transition: all 0.3s;
@@ -196,6 +239,7 @@
     opacity: 1;
 }
 .pcindex-banner4-ercodebox .download-ercode{
+    margin-top: 28px;
     width: 214px;
     box-shadow: 0px 16px 24px 0px rgba(105, 105, 105, 0.16);
 }
@@ -218,4 +262,75 @@
 }
 .pcindex-banner5-right .banner5-img{
     margin: 0 30px 0 45px;
+}
+.pcindex-footer{
+    background: url('../img/bg1.png') no-repeat ;
+    background-size: 100%;
+    /* height: 1050px; */
+    padding-top: 220px;
+    padding-bottom: 64px;
+    background-position-y: bottom;
+    color: #ffffff;
+}
+.pcindex-footer-code{
+    margin: 0 auto;
+    width: 970px;
+    height: 560px;
+    background-color: #26426C;
+    color: #ffffff;
+    box-shadow: 0px 12px 18px 0px rgba(47, 47, 51, 0.16);
+    border-radius: 10px;
+    padding-top: 15px;
+}
+.pcindex-footer-code .code-box{
+    height: 483px;
+    margin: 0 15px;
+    background-color: #183055;
+    text-align: left;
+    padding: 5px 0;
+}
+.pcindex-footer-code .code-copyright{
+    text-align: left;
+    line-height: 62px;
+    margin-left: 32px;
+}
+.pcindex-footer-subscribe .subscribe-input{
+    margin: 52px auto 0;
+    width: 620px;
+    height: 50px;
+    background: #3278E1;
+    border-radius: 25px;
+    overflow: hidden;
+}
+.pcindex-footer-subscribe .subscribe-input input{
+    width: 400px;
+    background-color: transparent;
+    padding-left: 32px;
+    height: 100%;
+}
+.subscribe-input input::placeholder {
+    color: #ffffff;
+}
+.pcindex-footer-subscribe .subscribe-input button{
+    width: 220px;
+    height: 100%;
+    background-color:#EBA612;
+    cursor: pointer;
+}
+.pcindex-footer-link{
+    margin-top: 100px;
+    text-align: left;
+    line-height: 32px;
+}
+.pcindex-footer-link h4{
+    margin-bottom: 32px;
+}
+.pcindex-footer-link .link2{
+    margin-left: 100px;
+}
+.pcindex-footer-link .link-right{
+    margin-left: 700px;
+}
+.pcindex-footer-copyright{
+    margin-top: 108px;
 }
