--- a/src/assets/less/flex.less
+++ b/src/assets/less/flex.less
@@ -56,6 +56,11 @@
     justify-content: flex-start;
     align-items: center;
 }
+.flex-start-s{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
 .flex-center{
     display: flex;
     justify-content: center;
