--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -4,6 +4,7 @@
 @gray: #CACACA;
 @light-grey: #F4F6F9;
 @yellow: #D1AE76;
+@default57: #575757;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -31,6 +32,9 @@
 .red-bg{
     background-color: @red;
     color: #ffffff;
+}
+.default57-color{
+    color: @default57;
 }
 .red-color{
     color: @red;
