feat: 商户部分静态页面

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -5,6 +5,8 @@
 @light-grey: #F4F6F9;
 @yellow: #D1AE76;
 @default57: #575757;
+@c9c9c9: #9C9C9C;
+@a6a6a6: #A6A6A6;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -58,6 +60,13 @@
 .light-grey-bg{
     background-color: @light-grey;
 }
+.c9c9c9-color{
+    color: @c9c9c9;
+}
+.a6a6a6-color{
+    color: @a6a6a6;
+}
+
 .usdt-bg{
     background-color: @usdt;
 }
