--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -7,6 +7,7 @@
 @default57: #575757;
 @c9c9c9: #9C9C9C;
 @a6a6a6: #A6A6A6;
+@black: #323232;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -65,6 +66,9 @@
 }
 .a6a6a6-color{
     color: @a6a6a6;
+}
+.black-color{
+    color: @black;
 }
 
 .usdt-bg{
