--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -1,4 +1,5 @@
-@primary: #5894EE;
+@primary: #DFC086;
+@primary-bg: #454545;
 @red: #FF6666;
 @green: #3CD2AC;
 @gray: #CACACA;
@@ -16,11 +17,17 @@
 @husd: #005ffa;
 
 .primary-bg{
-    background-color: @primary;
-    color: #ffffff;
+    background-color: @primary-bg;
+    color: @primary;
 }
 .primary-color{
     color: @primary;
+}
+.white-bg{
+    background-color: #ffffff;
+}
+.white-color{
+    color: #ffffff;
 }
 .primary-border-color{
     border-color: @primary;
