--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -18,6 +18,12 @@
 .app-padding40{
     padding: 0 40px;
 }
+.app-padding-t40{
+    padding-top: 40px;
+}
+.app-overflow-hidden{
+    overflow: hidden;
+}
 .app-padding-l40{
     padding-left: 40px;
 }
@@ -137,6 +143,11 @@ input,textarea {
 }
 .app-reset-diolog-message{
     white-space: normal;
+}
+
+.app-topo-br40{
+    box-shadow: 0px -27px 27px 0px rgba(242, 237, 229, 0.35);
+    border-radius: 40px 40px 0 0;
 }
 
 
