--- a/public/register/css/index.css
+++ b/public/register/css/index.css
@@ -60,15 +60,15 @@
 }
 
 .primary-color{
-    color: #5894EE;
+    color: #DFC086;
 }
 .primary-bg{
-    background-color: #5894EE;
-    color: #fff;
+    background-color: #454545;
+    color: #DFC086;
 }
 
 #register{
-    background: url(../img/bg.png) no-repeat;
+    background: url(../img/bg.jpg) no-repeat;
     background-size: 100% 100%;
     padding-bottom: 10vw;
 }
