feat：场外改版页面完成

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -20,6 +20,9 @@
     background-color: @primary-bg;
     color: @primary;
 }
+.primary-single-bg{
+    background-color: @primary-bg;
+}
 .primary-color{
     color: @primary;
 }
