--- a/src/assets/less/excludecss/index.less
+++ b/src/assets/less/excludecss/index.less
@@ -92,5 +92,9 @@
         -webkit-transform: scale(0.5);
         transform: scale(0.5);
         transform-origin: left top;
+        pointer-events: none;
     }
+}
+.scale-1px {
+    .scale-1px();
 }
