--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -33,6 +33,9 @@
 .app-margin-t40{
     margin-top: 40px;
 }
+.app-margin-l40{
+    margin-left: 40px;
+}
 .app-border-margin16{
     margin: 0 16px;
 }
@@ -53,8 +56,14 @@
 .app-size-45{
     font-size: 45px;
 }
+.app-size-50{
+    font-size: 50px;
+}
 .app-size-100{
     font-size: 100px;
+}
+.app-line-height50{
+    line-height: 50px;
 }
 
 .text-align-l{
@@ -148,6 +157,9 @@ input,textarea {
 .app-topo-br40{
     box-shadow: 0px -27px 27px 0px rgba(242, 237, 229, 0.35);
     border-radius: 40px 40px 0 0;
+}
+.app-topo-br50{
+    border-radius: 50px 50px 0 0;
 }
 
 
