--- a/src/assets/less/flex.less
+++ b/src/assets/less/flex.less
@@ -31,6 +31,12 @@
     justify-content: center;
     align-items: flex-end;
 }
+.flex-wrap-between{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+}
 .flex-around-c{
     display: flex;
     justify-content: space-around;
