--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -33,6 +33,9 @@
 .app-margin-t40{
     margin-top: 40px;
 }
+.app-margin-t16{
+    margin-top: 16px;
+}
 .app-margin-l40{
     margin-left: 40px;
 }
@@ -158,7 +161,7 @@ input,textarea {
     box-shadow: 0px -27px 27px 0px rgba(242, 237, 229, 0.35);
     border-radius: 40px 40px 0 0;
 }
-.app-topo-br50{
+.app-top-br50{
     border-radius: 50px 50px 0 0;
 }
 
