--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -6,6 +6,7 @@
 @light-grey: #F4F6F9;
 @yellow: #D1AE76;
 @default57: #575757;
+@default97: #979797;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -45,6 +46,9 @@
 }
 .default57-color{
     color: @default57;
+}
+.default97-color{
+    color: @default97;
 }
 .red-color{
     color: @red;
