--- a/src/assets/less/commons.less
+++ b/src/assets/less/commons.less
@@ -50,6 +50,12 @@
     width: 35px;
     height: auto;
 }
+.app-size-22{
+    font-size: 22px;
+}
+.app-size-24{
+    font-size: 24px;
+}
 .app-size-28{
     font-size: 28px;
 }
