--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -7,6 +7,7 @@
 @yellow: #D1AE76;
 @default57: #575757;
 @default97: #979797;
+@defaultA5: #A5A5A5;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -49,6 +50,9 @@
 }
 .default97-color{
     color: @default97;
+}
+.defaultA5-color{
+    color: @defaultA5;
 }
 .red-color{
     color: @red;
