feat： 商户申请状态优化

--- a/src/assets/less/color.less
+++ b/src/assets/less/color.less
@@ -8,6 +8,7 @@
 @default57: #575757;
 @default97: #979797;
 @defaultA5: #A5A5A5;
+@default45: #454545;
 
 @usdt: #FFA47A;
 @tusd: #22B67E;
@@ -53,6 +54,9 @@
 }
 .defaultA5-color{
     color: @defaultA5;
+}
+.default45-color{
+    color: @default45;
 }
 .red-color{
     color: @red;
